@@ -4,6 +4,8 @@ import java.io.IOException;
 import java.util.ArrayList;
 
 public class Main {
+
+    public Main() { main(null);}
     public static void main(String[] args){
         ArrayList<Player> myPlayerList = new ArrayList<>();
         Player jan = new Player("Jan", false , false);
@@ -13,7 +15,7 @@ public class Main {
 
         Game game = new Game(3,0, myPlayerList);
         game.giveHand(); // Initializes the deck and gives the hands of each player
-        game.setLastCardPlayed(game.deck.getPlayableCards().getFirst()); // We set the first card
+        game.setLastCardPlayed(game.deck.getPlayableCards().get(0)); // We set the first card
         for (int i = 0; i < myPlayerList.size(); i++) {
             CardClass cardPlayed = myPlayerList.get(i).playCard(game.getLastCardPlayed());
             if (cardPlayed == null) {
@@ -25,3 +27,5 @@ public class Main {
         }
     }
 }
+
+
